Make interface work

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/prove2me
+DATABASE_URL=postgresql://localhost/prove2me
 SECRET_KEY=your-secret-key-change-in-production
-LEAN_PROJECT_PATH=/path/to/prove2me_lean
+LEAN_PROJECT_PATH=/Users/macbookpro/prove2me/prove2me_lean
 LEAN_TIMEOUT=30
