--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -2,7 +2,7 @@
 script_location = alembic
 prepend_sys_path = .
 version_path_separator = os
-sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/prove2me
+sqlalchemy.url = postgresql://localhost/prove2me
 
 [post_write_hooks]
 
